[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4"
redis = { version = "0.22.3", features = ["connection-manager", "tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0" 
chrono = "0.4.41"
env_logger = "0.10"
actix-cors = "0.7"
url = "2.0"  # For URL validation
log = "0.4"  # For logging

